add Field Pages

--- a/诚信理财/app.json
+++ b/诚信理财/app.json
@@ -7,12 +7,31 @@
     "pages/field/field",
     "pages/mystudy/mystudy"
  
-	],
+  ],
   "window":{
     "backgroundTextStyle":"light",
     "navigationBarBackgroundColor": "#FFFFFF",
     "navigationBarTitleText": "诚信理财",
     "navigationBarTextStyle":"black"
+  },
+  
+  "tabBar": {
+    "list": [{
+      "pagePath": "pages/home/home",
+      "text": "首页",
+      "iconPath": "images/home.png",
+      "selectedIconPath": "images/home.png"
+    },{
+      "pagePath": "pages/field/field",
+      "text": "领域",
+      "iconPath": "images/field.png",
+      "selectedIconPath": "images/field.png"
+    },{
+      "pagePath": "pages/mystudy/mystudy",
+      "text": "我的学习",
+      "iconPath": "images/mystudy.png",
+      "selectedIconPath": "images/mystudy.png"
+    }]
   },
  
   "style": "v2",
