--- a/诚信理财/app.json
+++ b/诚信理财/app.json
@@ -5,7 +5,8 @@
     "pages/login/login",
     "pages/logs/logs",
     "pages/field/field",
-    "pages/mystudy/mystudy"
+    "pages/mystudy/mystudy",
+    "pages/search/search"
  
   ],
   "window":{
